Ensure messages don't exceed parent width - flex boxes by default use min-width: auto which makes things overflow on smaller screens

--- a/src/Message.css
+++ b/src/Message.css
@@ -15,6 +15,7 @@
     margin-left: 24px;
     margin-top: 6px;
     margin-bottom: 8px;
+    min-width: 0;
 }
 .MessageBodyWithLink{
     cursor: pointer;
@@ -107,6 +108,6 @@
 }
 
 .userImage{
-    max-width: 800px;
+    max-width: 100%;
     margin: 5px;
 }
