--- a/src/StatusPage.css
+++ b/src/StatusPage.css
@@ -29,6 +29,7 @@
 }
 
 .messageHolder{
+    min-width: 0;
     flex-grow: 2;
 }
 
